# simple-concurrent-get

./: Cargo.toml  READMD.md  README.md  deny.toml
examples/: concurrent-get-foreach.rs  concurrent-get.rs  make-get-requests.rs  stress-test.rs
src/: client.rs  config.rs  lib.rs
src/ordered/: get.rs  get_foreach.rs
src/tests/: mod.rs  ordered.rs  unordered.rs  utils.rs
src/unordered/: get.rs  get_foreach.rs  mod.rs
