[package]
name            = "simple-concurrent-get"
version         = "0.3.1"
edition         = "2021"
license         = "GPL-3.0"
authors         = ["ParkSnoopy <sunwoo2539@gmail.com>"]
description     = "Simply make multiple concurrent HTTP GET requests"
homepage        = "https://github.com/ParkSnoopy/simple-concurrent-get"
repository      = "https://github.com/ParkSnoopy/simple-concurrent-get"
documentation   = "https://docs.rs/simple-concurrent-get"
categories      = ["network-programming", "web-programming", "concurrency"]
keywords        = ["concurrent", "http", "get", "request"]

[dependencies]
reqwest = { version = "0.12.9", features = ["deflate", "gzip"] }
futures-util = "0.3.31"

[dev-dependencies]
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
futures-executor = "0.3.31"
itertools = "0.13.0"
scraper = "0.21.0"
